--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,77 @@
 body {
-    text-align: center;
-    background-color: gray;
+	text-align: center;
+	background-color: gray;
+	position: relative;
 }
+
+canvas {
+	width:505;
+	height:606;
+}
+
+p {
+	position: fixed;
+	left:100px;
+	top:0px;
+}
+
+.heart {
+	position: fixed;
+	top:0;
+	height: 50px;
+	width:40px;
+}
+
+#heart-one {
+	left: 60px;
+}
+
+#heart-two {
+	left: 100px;
+}
+
+#heart-three {
+	left: 140px;
+}
+
+#heart-four {
+	left: 180px;
+}
+
+#heart-five {
+	left: 220px;
+}
+
+.container {
+	width: 605px;
+	height: 705px;
+	position: relative;
+}
+
+.overlay {
+display: none;
+	z-index: 2;
+	background-color: black;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	text-align: center;
+	opacity: 0.6;
+}
+
+.messageBox {
+display:none;
+	z-index: 3;
+	background-color: white;
+	width: 50%;
+	height: 50%;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	opacity: 0.9;
+}
+
