--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 body {
 	text-align: center;
 	background-color: gray;
-	position: relative;
 }
 
 canvas {
 	width:505;
 	height:606;
+	position: relative;
 }
 
 p {
@@ -17,40 +17,21 @@ p {
 
 .heart {
 	display: none;
-	position: fixed;
-	top:0;
 	height: 50px;
 	width:40px;
+	float: left;
 }
 
-#heart-one {
-	left: 60px;
-}
 
-#heart-two {
-	left: 100px;
-}
-
-#heart-three {
-	left: 140px;
-}
-
-#heart-four {
-	left: 180px;
-}
-
-#heart-five {
-	left: 220px;
-}
 
 .container {
-	width: 605px;
-	height: 705px;
-	position: relative;
+	width: 505px;
+	height: 605px;
+	text-align: center;
 }
 
 .overlay {
-display: none;
+	display: none;
 	z-index: 2;
 	background-color: black;
 	width: 100%;
@@ -63,7 +44,7 @@ display: none;
 }
 
 .messageBox {
-display:none;
+	display:none;
 	z-index: 3;
 	background-color: white;
 	width: 50%;
@@ -76,3 +57,8 @@ display:none;
 	opacity: 0.9;
 }
 
+.heartContainer {
+	display: block;
+	width: 100%;
+	float:left;
+}
